# evtol_simulation

./: CMakeLists.txt  ChargerManager.cpp  ChargerManager.hpp  EVTOL.cpp  EVTOL.hpp  EVTOL_Coding_Standards_DO178C.md  FaultManager.cpp  FaultManager.hpp  FleetManager.cpp  FleetManager.hpp  README.md  README.txt  Simulation.hpp  StatisticsManager.hpp  StatisticsTracker.cpp  StatisticsTracker.hpp  VehicleProfile.hpp  VehicleType.hpp  build_and_run.bat  build_and_run.sh  build_and_run_simulation.sh  build_and_run_unit_tests.sh  enhancements.txt  linux_build_and_run.sh  main.cpp  run_all.sh  run_all_tests.sh  run_simulation.sh  setup.sh  windows_build_and_run_windows.bat
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake  test_evtol_methods
common/: AlphaEVTOL.hpp  BravoEVTOL.hpp  ChargerManager.hpp  CharlieEVTOL.hpp  Config.hpp  DeltaEVTOL.hpp  EVTOL.hpp  EchoEVTOL.hpp  FaultManager.hpp  FleetManager.hpp  SimulationConfig.hpp  Statistics.hpp  StatisticsReporter.hpp  StatisticsTracker.hpp  VehicleType.hpp
src/: AlphaEVTOL.cpp  BravoEVTOL.cpp  ChargerManager.cpp  CharlieEVTOL.cpp  DeltaEVTOL.cpp  EVTOL.cpp  EchoEVTOL.cpp  FaultManager.cpp  FleetManager.cpp  Statistics.cpp  StatisticsReporter.cpp  StatisticsTracker.cpp  main.cpp
tests/: CMakeLists.txt  test_charger_manager.cpp  test_chargermanager.cpp  test_evtol.cpp  test_evtol_methods.cpp  test_fault_manager.cpp  test_faultmanager.cpp  test_fleet_manager.cpp  test_fleetmanager.cpp  test_statistics_tracker.cpp  test_statisticstracker.cpp
text Files/: README.txt  evtol_assumptions.txt
txt/: DAL_B_Testing_Approach.txt  EVTOL_Enhancement_Opportunities.txt  EVTOL_Implementation_Assumptions.txt  Simulation_Console_Output.txt  Simulation_Console_Output2.txt  Simulation_Console_Output3.txt  Unit_Test_Console_Output.txt  evtol_simulation_enhancements.txt  evtol_test_assumptions.txt  evtol_test_enhancements.txt  run_all_output.txt  run_all_tests_output.txt  run_simulation_output.txt
